--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -19,11 +19,14 @@ architectures:
 base: core18
 
 plugs:
-  wine-platform-plug:
-    content: wine-base-stable
+  wine-runtime:
+    interface: content
+    target: $SNAP/wine-runtime
+    default-provider: wine-platform-runtime
+  wine-3-stable:
     interface: content
     target: $SNAP/wine-platform
-    default-provider: wine-platform
+    default-provider: wine-platform-3-stable
   icon-themes:
     interface: content
     target: $SNAP/data-dir/icons
@@ -33,12 +36,12 @@ apps:
   pspad:
     command: pspad
     desktop: usr/share/applications/pspad.desktop
-    plugs: [ wayland, x11, opengl, home, desktop, desktop-legacy, network, hardware-observe, process-control, cups-control, removable-media, wine-platform-plug ]
+    plugs: [ wayland, x11, opengl, home, desktop, desktop-legacy, network, hardware-observe, process-control, cups-control, removable-media, icon-themes, wine-runtime, wine-3-stable ]
 
 parts:
   pspad:
     plugin: nil
-    source: ./src
+    source: ./snap/local/src
     override-build: |
       snapcraftctl build
       set -ex
@@ -49,4 +52,5 @@ parts:
       - bin
       - usr
       - wine-platform
+      - wine-runtime
     build-packages: [unzip,wget]
