--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,5 @@
 name: pspad
-version: latest
-version-script: cat $SNAPCRAFT_STAGE/version
+title: PSPad (WINE)
 summary: PSPad is a text editor for developers.
 description: |
  The universal (freeware) text editor, useful for people who:
@@ -10,6 +9,7 @@ description: |
  *want to use a good IDE for their compiler - PSPad catches and parses compiler output, integrates external help files, compares versions and much more...
 
  There is no complex installation process, PSPad is ready to work immediately without requiring customization. The editor supports many file types and languages, with syntax highlighting. There are macros, clip files and templates to automate repetative tasks. Integrated HEX Editor, Project support, FTP Client, Macro Recorder, File Search/Replace, Code Explorer, Code page conversion... these are just some of the many features that PSPad offers.
+adopt-info: pspad
 
 confinement: strict
 grade: stable
@@ -17,26 +17,61 @@ architectures:
   - build-on: amd64
     run-on: [amd64, i386]
 base: core18
+compression: lzo
 
 plugs:
   wine-runtime:
     interface: content
     target: $SNAP/wine-runtime
     default-provider: wine-platform-runtime
-  wine-3-stable:
+  wine-6-stable:
     interface: content
     target: $SNAP/wine-platform
-    default-provider: wine-platform-3-stable
-  icon-themes:
-    interface: content
-    target: $SNAP/data-dir/icons
-    default-provider: gtk-common-themes
+    default-provider: wine-platform-6-stable
+
+environment:
+  WINEDLLOVERRIDES: "mscoree,mshtml=" # Prevent pop-ups about Wine Mono and Wine Gecko
+  WINEARCH: "win32"
+  RUN_EXE: "$SNAP_USER_DATA/pspad/pspad.exe"
+  SOMMELIER_KEEP_CWD: "1" # Don't change the working directory so relative paths still work
+  NO_AT_BRIDGE: "1" # Fix yad error Failed to connect to socket /tmp/dbus-xxx: No such file or directory
+  DISABLE_WAYLAND: "1" # Fix gtk decoration under wayland session
 
 apps:
   pspad:
-    command: pspad
+    extensions: [ gnome-3-28 ]
+    command: bin/sommelier run-exe
+    plugs:
+      - opengl
+      - home
+      - network
+      - hardware-observe
+      - process-control
+      - cups-control
+      - removable-media
     desktop: usr/share/applications/pspad.desktop
-    plugs: [ wayland, x11, opengl, home, desktop, desktop-legacy, network, hardware-observe, process-control, cups-control, removable-media, icon-themes, wine-runtime, wine-3-stable ]
+  # The wine command can be used to run applications inside the wine
+  # environment that this snap uses.
+  #
+  # For example, users can configure the wine environment of this snap
+  # by running `myapp.wine winecfg`.
+  wine:
+    extensions: [ gnome-3-28 ]
+    command: bin/sommelier
+    plugs:
+      - home
+      - network
+      - hardware-observe
+      - process-control
+      - cups-control
+      - removable-media
+  # The winetricks command can be used to run winetricks inside the wine
+  # environment that this snap uses.
+  winetricks:
+    extensions: [ gnome-3-28 ]
+    command: bin/sommelier winetricks
+    plugs:
+      - network
 
 parts:
   pspad:
@@ -53,4 +88,11 @@ parts:
       - usr
       - wine-platform
       - wine-runtime
+      - sommelier
     build-packages: [unzip,wget]
+  # The sommelier script helps you snap Windows applications using Wine. It
+  # initializes and configures Wine and installs the Windows application.
+  sommelier:
+    plugin: make
+    source: https://github.com/mmtrt/sommelier-core.git
+    source-branch: "tmp"
